crates/ssa-workflow-derive/tests/ui/canonical_encode/enum.stderr
error: CanonicalEncode can only be derived for unit enum variants
 --> tests/ui/canonical_encode/enum.rs:5:5
  |
5 |     A(u8),
  |     ^
