crates/ssa-workflow-derive/tests/ui/canonical_encode/enum.rs
use ssa_workflow_derive::CanonicalEncode;

#[derive(CanonicalEncode)]
enum BadEnum {
    A(u8),
}

fn main() {}
